--- a/resources/leiningen/new/shadow_cljs/index.html
+++ b/resources/leiningen/new/shadow_cljs/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
   </head>
   <body>
     <div id="app">
       Shadow-cljs rocks!
     </div>
-    <script src="js/compiled/main.js" type="text/javascript"></script>
+    <script src="/js/compiled/main.js" type="text/javascript"></script>
     <script>{{name}}.core.init();</script>
   </body>
 </html>
