Allow project name with hyphen
Use `{{sanitized}}` in the index.html.

--- a/resources/leiningen/new/shadow_cljs/index.html
+++ b/resources/leiningen/new/shadow_cljs/index.html
@@ -11,6 +11,6 @@
       Shadow-cljs rocks!
     </div>
     <script src="/js/compiled/main.js" type="text/javascript"></script>
-    <script>{{name}}.core.init();</script>
+    <script>{{sanitized}}.core.init();</script>
   </body>
 </html>
